--- a/mobile.html
+++ b/mobile.html
@@ -14,10 +14,10 @@
 		<div class="header">
 			<h1>Future Game Designer</h1>
 		<div class="nav">
-			<p><a href="C:\Users\Erick\Desktop\Future Programer\Portfolio.html">Home</a>          
+			<p><a href="C:\Users\Erick\Desktop\Future Programer\mobile.html">Home</a>            
 				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>         
 				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>          
-				Contacts</p>
+				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
 		</div>
 		</div>
 		
