--- a/Work.html
+++ b/Work.html
@@ -4,7 +4,7 @@
 		
 		
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
-		<link rel="stylesheet" type="text/css" href="Work.css"/>
+		<link rel="stylesheet" type="text/css" href="mobile.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title> Erick Portfolio\Work</title>
 		
@@ -18,7 +18,7 @@
 			<p><a href="C:\Users\Erick\Desktop\Future Programer\mobile.html">Home</a>           
 				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>         
 				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>          
-				Contacts</p></p>
+				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
 		</div>
 		</div>
 		
