--- a/Work.html
+++ b/Work.html
@@ -4,7 +4,7 @@
 		
 		
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
-		<link rel="stylesheet" type="text/css" href="mobile.css"/>
+		<link rel="stylesheet" type="text/css" href="pjct.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title> Erick Portfolio\Work</title>
 		
@@ -15,7 +15,7 @@
 		<div class="header">
 			<h1>Current Work</h1>
 		<div class="nav">
-			<p><a href="C:\Users\Erick\Desktop\Future Programer\mobile.html">Home</a>           
+			<p><a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home</a>           
 				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>         
 				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>          
 				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
