--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,6 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
 		<link rel="stylesheet" type="text/css" href="mobile.css"/>
-			
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Erick Contact</title> 
 	</head>
@@ -13,9 +12,10 @@
 		<div class="header">
 			<h1>Contact</h1>
 		<div class="nav">
-			<p><a href="C:\Users\Erick\Desktop\Future Programer\mobile.html">Home</a>            
-				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>         
-				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>          
+			<p>
+				<a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio&nbsp;&nbsp;&nbsp;</a>         
+				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work&nbsp;&nbsp;&nbsp;</a>          
 				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
 		</div>
 		</div>
@@ -24,6 +24,10 @@
 
 		
 		<!-- AND ABOVE HERE -->
+		<div class="footer">
+			<p>Email:erickendy18@gmail.com Cell:(203-428-7937)</p>
+			<p>"An Explorers Journey"</p>
+		</div>
 
 	</body>
 </html>
