--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,19 @@
 		<div class="header">
 			<h1>Future Game Designer</h1>
 		<div class="nav">
-			<p><a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home</a>            
-				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>         
-				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>          
-				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
+			<p>
+				<a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio&nbsp;&nbsp;&nbsp;</a>         
+				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work&nbsp;&nbsp;&nbsp;</a>          
+				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a>
+			</p>
 		</div>
+		
+		<i class="icon-steam2"></i>
 		<i class="icon-facebook2"></i>
+		<i class="icon-linkedin"></i>
+	
+	
 		</div>
 		
 		<img class="1" src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xpf1/t51.2885-15/10299880_288994381262260_1793837293_n.jpg"/>
