--- a/Work.html
+++ b/Work.html
@@ -15,9 +15,10 @@
 		<div class="header">
 			<h1>Current Work</h1>
 		<div class="nav">
-			<p><a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home</a>           
-				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>         
-				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>          
+			<p>
+				<a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home&nbsp;&nbsp;&nbsp;</a>           
+				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio&nbsp;&nbsp;&nbsp;</a>         
+				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work&nbsp;&nbsp;&nbsp;</a>          
 				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
 		</div>
 		</div>
@@ -42,10 +43,7 @@
 	
 		
 
-		<div class="footer">
-			<p>Email:erickendy18@gmail.com Cell:(203-428-7937)</p>
-			<p>"An Explorers Journey"</p>
-		</div>
+		&nbsp;&nbsp;&nbsp;
 		</div>
 	</body>
 </html>
