--- a/Work.html
+++ b/Work.html
@@ -16,7 +16,7 @@
 			<h1>Current Work</h1>
 		<div class="nav">
 			<p>
-				<a href="C:\Users\Erick\Desktop\Future Programer\Index.html">Home&nbsp;&nbsp;&nbsp;</a>           
+				<a href="C:\Users\Erick\Desktop\Future Programer\index.html">Home&nbsp;&nbsp;&nbsp;</a>           
 				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio&nbsp;&nbsp;&nbsp;</a>         
 				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work&nbsp;&nbsp;&nbsp;</a>          
 				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
