--- a/Work.html
+++ b/Work.html
@@ -16,10 +16,10 @@
 			<h1>Current Work</h1>
 		<div class="nav">
 			<p>
-				<a href="C:\Users\Erick\Desktop\Future Programer\index.html">Home&nbsp;&nbsp;&nbsp;</a>           
-				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio&nbsp;&nbsp;&nbsp;</a>         
-				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work&nbsp;&nbsp;&nbsp;</a>          
-				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
+				<a href=index.html>Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href=Bio.html>Bio&nbsp;&nbsp;&nbsp;</a>         
+				<a href=Work.html>Work&nbsp;&nbsp;&nbsp;</a>          
+				<a href=Contact.html>Contacts</a></p>
 		</div>
 		</div>
 		
