--- a/Contact.html
+++ b/Contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
 		<link rel="stylesheet" type="text/css" href="mobile.css"/>
+		<link rel="shortcut icon" href="http://cdn.flaticon.com/png/256/70841.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Erick Contact</title> 
 	</head>
@@ -13,7 +14,7 @@
 			<h1>Contact</h1>
 		<div class="nav">
 			<p>
-				<<a href=index.html>Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href=index.html>Home&nbsp;&nbsp;&nbsp;</a>            
 				<a href=Bio.html>Bio&nbsp;&nbsp;&nbsp;</a>         
 				<a href=Work.html>Work&nbsp;&nbsp;&nbsp;</a>          
 				<a href=Contact.html>Contacts</a>
@@ -28,6 +29,7 @@
 		<div class="footer">
 			<p>Email:erickendy18@gmail.com Cell:(203-428-7937)</p>
 			<p>"An Explorers Journey"</p>
+			<p>Icons made by <a href="http://www.flaticon.com"/> flaticon</a></p>
 		</div>
 
 	</body>
