--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
 		<link rel="stylesheet" type="text/css" href="mobile.css"/>
-		
+		<link rel="shortcut icon" href="http://cdn.flaticon.com/png/256/70841.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title> Erick Portfolio </title>
 		
@@ -18,7 +18,7 @@
 				<a href=index.html>Home&nbsp;&nbsp;&nbsp;</a>            
 				<a href=Bio.html>Bio&nbsp;&nbsp;&nbsp;</a>         
 				<a href=Work.html>Work&nbsp;&nbsp;&nbsp;</a>          
-				<a href=Contact.html>Contacts<a>
+				<a href=Contact.html>Contacts</a>
 			</p>
 		</div>
 		
