--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 				<a href=Contact.html>Contacts</a>
 			</p>
 		</div>
-		
-		<i class="icon-steam2"></i>
+		<a href="" class="portfolioicon">
+				<i class="icon-steam2"></i>				
+			</a>	
+		<i >
+			::before </i>
 		<i class="icon-facebook2"></i>
 		<i class="icon-linkedin"></i>
 	
