--- a/Contact.html
+++ b/Contact.html
@@ -21,20 +21,22 @@
 			</p>
 		</div>
 		</div>
-		<h3>Name:Erickendy Jean Pierre</h3>
+		<h3>Name: Erickendy Jean Pierre</h3>
 		<h3>School: University of Connecticut</h3>
-		<h3>Major:Digital Media and Design</h3>
-		<h3>Concentration:Game Design</h3>
-		<h3>Email:erickendy18@gmail.com</h3>
-		<h3>Cell:(203-428-7937)</h3>
-		<h3>Home:(203)-296-2361</h3>
+		<h3>Major: Digital Media and Design</h3>
+		<h3>Concentration: Game Design</h3>
+		<h3>Email: erickendy18@gmail.com</h3>
+		<h3>Cell: (203)-428-7937</h3>
+		<h3>Home: (203)-296-2361</h3>
 
 		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
 
 		
+		<i class="icon-steam2"></i>				
+		<i class="icon-facebook2"></i>
+		<i class="icon-linkedin"></i>
 		<!-- AND ABOVE HERE -->
 		<div class="footer">
-			<p>Email:erickendy18@gmail.com Cell:(203-428-7937)</p>
 			<p>"An Explorers Journey"</p>
 			<p>Icons made by <a href="http://www.flaticon.com"/> flaticon</a></p>
 		</div>
