--- a/Contact.html
+++ b/Contact.html
@@ -31,10 +31,11 @@
 
 		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
 
-		
+		<div>
 		<i class="icon-steam2"></i>				
 		<i class="icon-facebook2"></i>
 		<i class="icon-linkedin"></i>
+	</div>
 		<!-- AND ABOVE HERE -->
 		<div class="footer">
 			<p>"An Explorers Journey"</p>
