--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<img class="1" src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xpf1/t51.2885-15/10299880_288994381262260_1793837293_n.jpg"/>
 		<img class="2" src="https://igcdn-photos-c-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/10401834_756629741054194_1769351862_n.jpg"/>
-		<img class="3" src="https://i.imgflip.com/k7g25.gif"/>
+		<img class="3" src="https://igcdn-photos-b-a.akamaihd.net/hphotos-ak-xap1/t51.2885-15/1168760_1408618242752857_2103339546_n.jpg"/>
 		<img class="4" src="https://igcdn-photos-a-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/10424448_664210666996776_967217522_n.jpg"/>
 
 		
