--- a/Contact.html
+++ b/Contact.html
@@ -28,6 +28,7 @@
 		<h3>Email: erickendy18@gmail.com</h3>
 		<h3>Cell: (203)-428-7937</h3>
 		<h3>Home: (203)-296-2361</h3>
+		<a class="id"href="https://my.playstation.com/logged-in/trophies/public-trophies/?onlinename=soule_kid"><img src="http://fp.profiles.us.playstation.com/playstation/psn/pid/soule_kid.png"/></a>
 
 		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
 
