new background thingy

--- a/Work.html
+++ b/Work.html
@@ -32,7 +32,8 @@
 			
 			<h2>After</h2>
 			<img class="pic" src="after.png">
-			<p class="description">&nbsp;&nbsp;&nbsp;This project was to make subtle changes to an environment not too drastic but just enough to improve it by a little. I used some saturation filter on this and made the sunset a little bit brighter. I also made the snow a little more appealing by making it pop out more. I took away the hay around tree to make the tree stand out more. The reason why I selected this environment to change it was because it made me feel emotion by looking at it. It made me feel at peace and the tree was a thing of beauty like out of all the trees in the world this was the best out of all of them.</p>
+			<p class="description">&nbsp;&nbsp;&nbsp;This project was to make subtle changes to an environment not too drastic but just enough to improve it by a little. I used some saturation filter on this and made the sunset a little bit brighter. I also made the snow a little more appealing by making it pop out more. I took away the hay around the tree to make the tree stand out more. </p>
+				<p class="description">The reason why I selected this environment was because it made me feel at peace and that the tree was a thing of beauty, like out of all the trees in the world this was the best out of all of them. Beause of its isolation state </p>
 
 			<section>
 			
