--- a/Contact.html
+++ b/Contact.html
@@ -4,20 +4,21 @@
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
 		<link rel="stylesheet" type="text/css" href="mobile.css"/>
 		<link rel="shortcut icon" href="http://cdn.flaticon.com/png/256/70841.png"/>
+		<link href="css/hover.css" rel="stylesheet" media="all"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Erick Contact</title> 
 	</head>
 	
-
+	<a name="top"></a>
 	<body>
 		<div class="header">
 			<h1>Contact</h1>
 		<div class="nav">
 			<p>
-				<a href=index.html>Home&nbsp;&nbsp;&nbsp;</a>            
-				<a href=Bio.html>Bio&nbsp;&nbsp;&nbsp;</a>         
-				<a href=Work.html>Work&nbsp;&nbsp;&nbsp;</a>          
-				<a href=Contact.html>Contacts</a>
+				<a href=index.html class="button hvr-buzz">Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href=Bio.html class="button hvr-buzz">Bio&nbsp;&nbsp;&nbsp;</a>         
+				<a href=Work.html class="button hvr-buzz">Work&nbsp;&nbsp;&nbsp;</a>          
+				<a href=Contact.html class="button hvr-buzz">Contacts</a>
 			</p>
 		</div>
 		</div>
@@ -27,21 +28,23 @@
 		<h3>Concentration: Game Design</h3>
 		<h3>Email: erickendy18@gmail.com</h3>
 		<h3>Cell: (203)-428-7937</h3>
-		<h3>Home: (203)-296-2361</h3>
 		<a class="id"href="https://my.playstation.com/logged-in/trophies/public-trophies/?onlinename=soule_kid"><img src="http://fp.profiles.us.playstation.com/playstation/psn/pid/soule_kid.png"/></a>
 
-		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
+		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE 
 
 		<div>
+		
 		<i class="icon-steam2"></i>				
 		<i class="icon-facebook2"></i>
 		<i class="icon-linkedin"></i>
 	</div>
-		<!-- AND ABOVE HERE -->
+		AND ABOVE HERE -->
 		<div class="footer">
 			<p>"An Explorers Journey"</p>
 			<p>Icons made by <a href="http://www.flaticon.com"/> flaticon</a></p>
 		</div>
 
 	</body>
+
+	<a href="#top">Back to Top</a>
 </html>
