--- a/Work.html
+++ b/Work.html
@@ -6,21 +6,23 @@
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
 		<link rel="stylesheet" type="text/css" href="pjct.css"/>
 		<link rel="shortcut icon" href="http://cdn.flaticon.com/png/256/70841.png"/>
+		<link href="css/hover.css" rel="stylesheet" media="all"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title> Erick Portfolio\Work</title>
 		
 	</head>
-
+	<a name="top"></a>
 	<body>
 		<div class="wrap">
 		<div class="header">
 			<h1>Current Work</h1>
 		<div class="nav">
 			<p>
-				<a href=index.html>Home&nbsp;&nbsp;&nbsp;</a>            
-				<a href=Bio.html>Bio&nbsp;&nbsp;&nbsp;</a>         
-				<a href=Work.html>Work&nbsp;&nbsp;&nbsp;</a>          
-				<a href=Contact.html>Contacts</a></p>
+				<a href=index.html class="button hvr-buzz">Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href=Bio.html class="button hvr-buzz">Bio&nbsp;&nbsp;&nbsp;</a>         
+				<a href=Work.html class="button hvr-buzz">Work&nbsp;&nbsp;&nbsp;</a>          
+				<a href=Contact.html class="button hvr-buzz">Contacts</a>
+			</p>
 		</div>
 		</div>
 			<article>
@@ -53,4 +55,5 @@
 		&nbsp;&nbsp;&nbsp;
 		</div>
 	</body>
+	<a href="#top">Back to Top</a>
 </html>
