--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
 		<link rel="stylesheet" type="text/css" href="mobile.css"/>
 		<link rel="shortcut icon" href="http://cdn.flaticon.com/png/256/70841.png"/>
+		<link href="css/hover.css" rel="stylesheet" media="all"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title> Erick Portfolio </title>
 		
 	</head>
-
+	<a name="top"></a>
 	<body>
 		<div class="wrap">
 		<div class="header">
 			<h1>Future Game Designer</h1>
 		<div class="nav">
 			<p>
-				<a href=index.html>Home&nbsp;&nbsp;&nbsp;</a>            
-				<a href=Bio.html>Bio&nbsp;&nbsp;&nbsp;</a>         
-				<a href=Work.html>Work&nbsp;&nbsp;&nbsp;</a>          
-				<a href=Contact.html>Contacts</a>
+				<a href=index.html class="button hvr-buzz">Home&nbsp;&nbsp;&nbsp;</a>            
+				<a href=Bio.html class="button hvr-buzz">Bio&nbsp;&nbsp;&nbsp;</a>         
+				<a href=Work.html class="button hvr-buzz">Work&nbsp;&nbsp;&nbsp;</a>          
+				<a href=Contact.html class="button hvr-buzz">Contacts</a>
 			</p>
 		</div>
 	
@@ -38,4 +39,5 @@
 	</div>
 	</body>
 
+	<a href="#top">Back to Top</a>
 </html>
