--- a/Work.html
+++ b/Work.html
@@ -55,5 +55,5 @@
 		&nbsp;&nbsp;&nbsp;
 		</div>
 	</body>
-	<a href="#top">Back to Top</a>
+	<a href="#top" class="button hvr-buzz">Back to Top</a>
 </html>
