Resume download link :D

--- a/Contact.html
+++ b/Contact.html
@@ -28,6 +28,7 @@
 		<h3>Concentration: Game Design</h3>
 		<h3>Email: erickendy18@gmail.com</h3>
 		<h3>Cell: (203)-428-7937</h3>
+		<h3>Download my <a href="March 2015 resume update.docx" target="_blank" class="button hvr-buzz">Resume</a>
 		<a class="id"href="https://my.playstation.com/logged-in/trophies/public-trophies/?onlinename=soule_kid"><img src="http://fp.profiles.us.playstation.com/playstation/psn/pid/soule_kid.png"/></a>
 
 		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE 
@@ -40,6 +41,7 @@
 	</div>
 		AND ABOVE HERE -->
 		<div class="footer">
+
 			<p>"An Explorers Journey"</p>
 			<p>Icons made by <a href="http://www.flaticon.com"/> flaticon</a></p>
 		</div>
