--- a/Contact.html
+++ b/Contact.html
@@ -29,17 +29,9 @@
 		<h3>Email: erickendy18@gmail.com</h3>
 		<h3>Cell: (203)-428-7937</h3>
 		<h3>Download my <a href="March 2015 resume update.docx" target="_blank" class="button hvr-buzz">Resume</a>
-		<a class="id"href="https://my.playstation.com/logged-in/trophies/public-trophies/?onlinename=soule_kid"><img src="http://fp.profiles.us.playstation.com/playstation/psn/pid/soule_kid.png"/></a>
+		<a href="https://my.playstation.com/logged-in/trophies/public-trophies/?onlinename=soule_kid"><img class="id" src="http://fp.profiles.us.playstation.com/playstation/psn/pid/soule_kid.png"/></a>
 
-		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE 
-
-		<div>
 		
-		<i class="icon-steam2"></i>				
-		<i class="icon-facebook2"></i>
-		<i class="icon-linkedin"></i>
-	</div>
-		AND ABOVE HERE -->
 		<div class="footer">
 
 			<p>"An Explorers Journey"</p>
