--- a/Contact.html
+++ b/Contact.html
@@ -22,6 +22,7 @@
 			</p>
 		</div>
 		</div>
+		<div>
 		<h3>Name: Erickendy Jean Pierre</h3>
 		<h3>School: University of Connecticut</h3>
 		<h3>Major: Digital Media and Design</h3>
@@ -29,6 +30,7 @@
 		<h3>Email: erickendy18@gmail.com</h3>
 		<h3>Cell: (203)-428-7937</h3>
 		<h3>Download my <a href="March 2015 resume update.docx" target="_blank" class="button hvr-buzz">Resume</a>
+		</div>
 		<a href="https://my.playstation.com/logged-in/trophies/public-trophies/?onlinename=soule_kid"><img class="id" src="http://fp.profiles.us.playstation.com/playstation/psn/pid/soule_kid.png"/></a>
 
 		
