Link to the dog

--- a/Work.html
+++ b/Work.html
@@ -21,6 +21,7 @@
 				<a href=index.html class="button hvr-buzz">Home&nbsp;&nbsp;&nbsp;</a>            
 				<a href=Bio.html class="button hvr-buzz">Bio&nbsp;&nbsp;&nbsp;</a>         
 				<a href=Work.html class="button hvr-buzz">Work&nbsp;&nbsp;&nbsp;</a>          
+				<a href=The Dog.html class="button hvr-buzz">The Dog&nbsp;&nbsp;&nbsp;</a>
 				<a href=Contact.html class="button hvr-buzz">Contacts</a>
 			</p>
 		</div>
